@@ -121,6 +121,9 @@ Changes include:
   resize handling - bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=1430">1430</a>.)
 </P>
 <P>
+  X11video: properly handle input focus events (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=5426">5426</a>.)
+</P>
+<P>
   X11video: unblock SDL_WM_GrabInput() GrabNotViewable case (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=1155">1155</a>.)
 </P>
 <P>
